Opened 16 years ago

Closed 16 years ago

Last modified 16 years ago

#2721 closed bug (fixed)

error starting "/bin/sh"

Reported by: diver Owned by: bonefish
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Since some time (about month) now Haiku don't boot on my hw anymore. I enabled onscreen degug output and last 2 lines which look relevant are:

team_create_thread_start: Could not create default user region
error starting "/bin/sh" error = -1

Change History (14)

comment:1 by PieterPanman, 16 years ago

Did you build it yourself? Check to see if you don't have a conflict in the HaikuImage file. I've had this a few times after updating.

comment:2 by diver, 16 years ago

Yes, I build it myself, HaikuImage file is unchanged. vmware image generated from the same sources works just fine.

comment:3 by diver, 16 years ago

Component: SystemSystem/Kernel

Ok, it took me two days and many hours of recompiling, but I tracked down this to the last working revision.

hrev27232 works hrev27233 don't

comment:4 by bonefish, 16 years ago

That revision enabled swap support, so I suppose, if you take a current revision and disable swap support (by commenting out the #define ENABLE_SWAP_SUPPORT line in haiku/trunk/headers/private/kernel/vm_types.h), it should work again, right?

Since this apparently has something to do with your hardware, how much RAM do you have and how much free space on the Haiku partition?

In hrev27835 I've added the error code to the "team_create_thread_start:..." message. Could you please check what it says.

comment:5 by diver, 16 years ago

I commented out #define ENABLE_SWAP_SUPPORT in current revision, but now it won't build.

C++ generated/objects/haiku/x86/release/system/kernel/vm/vm.o
src/system/kernel/vm/vm.cpp: In function `void vm_get_info(system_memory_info *)':
src/system/kernel/vm/vm.cpp:4858: implicit declaration of function `int swap_get_info(...)'

/home/diver/haiku/trunk/generated/cross-tools/bin/i586-pc-haiku-gcc -c "src/system/kernel/vm/vm.cpp" -O -Wall -Wno-trigraphs -Wno-multichar -nostdinc -Wno-multichar -D_ZETA_USING_DEPRECATED_API_=1 -D_ZETA_TS_FIND_DIR_=1 -finline -fno-builtin -fno-exceptions -Wno-multichar -DBOCHS_DEBUG_HACK=0 -fno-pic -D_KERNEL_MODE -D__HAIKU__ -DHAIKU_DISTRO_COMPATIBILITY_DEFAULT -D__INTEL__ -DARCH_x86 -D_BEOS_R5_COMPATIBLE_ -DHAIKU_TARGET_PLATFORM_HAIKU -Ibuild/user_config_headers -Ibuild/config_headers -Isrc/system/kernel/vm -Igenerated/objects/common/system/kernel/vm -Igenerated/objects/linux/x86/common/system/kernel/vm -Igenerated/objects/haiku/x86/common/system/kernel/vm -Isrc/system/kernel/vm/../device_manager -I- -Iheaders/private/shared -Iheaders/private/. -Iheaders/private/kernel -Iheaders/private/libroot -Iheaders/private/kernel/boot/platform/bios_ia32 -Iheaders/private/kernel/arch/x86 -Iheaders/private/. -Iheaders/private/system -Iheaders/private/system/arch/x86 -Iheaders/build/gcc-2.95.3 -Iheaders -Iheaders/posix -Iheaders/gnu -Iheaders/glibc -Iheaders/os -Iheaders/os/add-ons -Iheaders/os/add-ons/file_system -Iheaders/os/add-ons/graphics -Iheaders/os/add-ons/input_server -Iheaders/os/add-ons/registrar -Iheaders/os/add-ons/screen_saver -Iheaders/os/add-ons/tracker -Iheaders/os/app -Iheaders/os/device -Iheaders/os/drivers -Iheaders/os/game -Iheaders/os/interface -Iheaders/os/kernel -Iheaders/os/media -Iheaders/os/mail -Iheaders/os/midi -Iheaders/os/midi2 -Iheaders/os/net -Iheaders/os/opengl -Iheaders/os/storage -Iheaders/os/support -Iheaders/os/translation -Iheaders/private/. -Iheaders/cpp -o "generated/objects/haiku/x86/release/system/kernel/vm/vm.o" ;

...failed C++ generated/objects/haiku/x86/release/system/kernel/vm/vm.o ...
...removing generated/objects/haiku/x86/release/system/kernel/vm/vm.o

comment:6 by diver, 16 years ago

My Haiku partition is 2,9 Gb and I have 1280 Mb of ram: 512+512+256.

comment:7 by axeld, 16 years ago

Build fixed in hrev27838, can you please try again? And this problem is 100% reproducible for you?

comment:8 by diver, 16 years ago

Yes, it is 100% reproducible since hrev27233. I usually update my svn tree twice a week.

comment:9 by diver, 16 years ago

Ok, I've updated to current revision. Now I get

team_create_thread_start: Could not create default user region: Out of memory
error starting "/bin/sh" error = -1

If I comment out #define ENABLE_SWAP_SUPPORT Haiku boots ok.

in reply to:  9 comment:10 by korli, 16 years ago

Replying to diver:

Ok, I've updated to current revision. Now I get

team_create_thread_start: Could not create default user region: Out of memory
error starting "/bin/sh" error = -1

If I comment out #define ENABLE_SWAP_SUPPORT Haiku boots ok.

According to the source, the error message should be: team_create_thread_start: Could not create default user stack region: Out of memory

comment:11 by diver, 16 years ago

Sure it is.

comment:12 by bonefish, 16 years ago

Owner: changed from axeld to bonefish
Status: newassigned

Can reproduce the problem with the same RAM setting.

comment:13 by bonefish, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev27877.

comment:14 by diver, 16 years ago

Thanks!

Note: See TracTickets for help on using tickets.