* Fixed several instances of conversions from page to byte counts. We   need to cast explicitly before the multiplication/shift, since the   former is 32 bit and the latter 64 bit. The worst instance was in   swap_file_add(), where the page count was int32, so that swap file   sizes between 2 and 4 GB resulted in a negative available swap space   size. Fixes bug #2721. * Fixed and added optional debug output.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27877 a95241bf-73f2-0310-859d-f6bbb57e9c96